--- a/sample/templates/sample/users-list.html
+++ b/sample/templates/sample/users-list.html
@@ -1,14 +1,37 @@
+<form ng-submit="vm.search()">
+	<md-input-container>
+		<md-icon class="md-accent">
+			<i class="material-icons">search</i>
+		</md-icon>
+		<label>Name</label>
+		<input ng-model="vm.name">
+	</md-input-container>
+</form>
+
+
+<md-divider></md-divider>
+
+<md-button ng-if="vm.limit != 2" ng-click="vm.changeLimit(2)">Limit 2</md-button>
+<md-button ng-if="vm.limit != 10" ng-click="vm.changeLimit(10)">Limit 10</md-button>
+
+<md-divider></md-divider>
+
 <md-list flex>
 	<md-list-item class="md-3-line" ng-repeat="user in vm.users">
-		<md-icon>
+
+		<md-icon class="md-accent">
 			<i class="material-icons md-48">account_circle</i>
 		</md-icon>
+
 		<div class="md-list-item-text" layout="column">
 			<h3>@{ user.first_name } @{user.last_name}</h3>
 			<h4>@{ user.username }</h4>
 			<p>@{ user.email }</p>
 		</div>
+
 		<md-divider></md-divider>
+
 	</md-list-item>
 </md-list>
+
 <md-button ng-if="vm.canLoadMore()" ng-click="vm.loadMore()">Load more</md-button>
